syntax = "proto3";

option csharp_namespace = "Lab3.Task2.Presentation";

package product;

service ProductServiceProto {
    rpc CreateProduct(ProductRequest) returns (ProductResponse);
    rpc GetProducts(GetProductsRequest) returns (GetProductsResponse);
}

message ProductRequest {
  string name = 1;
  int32 price = 2;
}
message ProductResponse {
  int64 product_id = 1;
}

message ProductProto{
  int64 product_id = 1;
  string name = 2;
  string price = 3;
}
message GetProductsRequest{
  repeated int64 ids = 1;
  int32 min_price = 2;
  int32 max_price = 3;
  string name_pattern = 4;
  int32 page_size = 5;
  int32 cursor = 6;
}
message GetProductsResponse{
  repeated ProductProto products = 1;
}